Fix temp profile panel control spacing.

--- a/app/assets/stylesheets/spree/frontend/spree_brewbit_dashboard.css.scss
+++ b/app/assets/stylesheets/spree/frontend/spree_brewbit_dashboard.css.scss
@@ -16,7 +16,7 @@ the installer will append this file to the app vendored assets here: 'vendor/ass
   margin-bottom: 25px;
 }
 
-.session-delete {
+.panel-controls {
   margin-top: -23px;
 }
 
